tests/baselines/reference/objectLiteralWithNumericPropertyName.errors.txt
objectLiteralWithNumericPropertyName.ts(5,5): error TS2322: Type 'number' is not assignable to type 'string'.


==== objectLiteralWithNumericPropertyName.ts (1 errors) ====
    interface A {
        0: string;
    }
    var x: A = {
        0: 3
        ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
!!! related TS6500 objectLiteralWithNumericPropertyName.ts:2:5: The expected type comes from property '0' which is declared here on type 'A'
    };
    